styles/main.css
@import url('https://fonts.googleapis.com/css?family=Harmattan|Montserrat');

/* General layout of website */
#body {
  background-color: #81F0BC;
}

header {
  color: #42B1D6;
  text-shadow: 1px 1px 0 rgb(255, 0, 0);
  font-size: 32px;
  background-color: #F58711;
  font-family: "Monserrat";
}

h3 {
  text-decoration: underline;
  font-family: "Monserrat";
}

#drop {
  float: left;
}

@font-face {
  font-family: 'Glyphicons Halflings';
  src: url('../../fonts/glyphicons-halflings-regular.eot');
  src: url('../../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
}

.btn-home {
  background-color: #FFA3C8;
}

.btn-upwork {
  background-color: #8CE070;
}

.btn-refind {
  background-color: #F1FFFF;
}

.btn-refind:hover {
  background-color: black;
}

.btn-reddit {
  background-color: #FC4501;
}

.btn-stackoverflow {
  background-color: #FFE8DF;
}

.btn-stackoverflow:hover {
  background-color: black;
}

.fa-reddit:hover {
  background-color: black;
}

#upicon {
  color: white;
  font-size: 25px;
  font-weight: bold;
}

#upicon:hover {
  color: black;
}

.btn-social-icon {
  padding-left: 1px;
  padding-right: 1px;
}

.btn-social-icon:hover {
  color: #61F2A5;
}

.white {
  color: white;
}

#intro {
  padding-top: 25px;
}

p {
  font-size: 18px;
  font-family: "Harmattan";
}

#social {
  padding-top: 20px;
}

#conbutton {
  padding-top: 15px;
  font-family: "Harmattan";
}

#morelink {
  padding-top: 15px;
  font-family: "Harmattan";
}

.dropdown-menu li {
  font-family: "Harmattan";
  font-size: 18px;
}

#affil {
  padding-top: 20px;
}

.un {
  text-decoration: underline;
}

.contact {
    position: absolute;
    top: 75px;
    left: 0;
}

#cbutton {
  position: absolute;
  bottom: -400px;
  left: 0;
  font-family: "Harmattan";
  padding-bottom: 10px;
}

.follow {
  position: relative;
  top: 75px;
  float: right;
}

#mainphilo {
  padding-top: 15px;
}

#xpapers_gadget ol {
  list-style-type: none;
}

#philobutton {
  padding-top: 25px;
  font-family: "Harmattan";
}

.navbar {
  top: -37.5px;
  width: 100%;
}

.navbar-brand {
  background-color: orange;
  color: white;
  width: 12.5%;
  text-align: center;
  border-right: 1px solid #000000;
  font-family: "Harmattan";
}

.navbar-brand:hover {
  background-color: white;
  color: cyan;
}

.info {
  padding-left: 50px;
}

#mepic {
  position: relative;
  left: 0;
  top: 0px;
  width: 250px;
  height: 425px;
}

.mediv {
  position: absolute;
  width: 550px;
  left: 32.5%;
  top: 225px;
  background-color: white;
}

.stuff {
  width: 100%;
  float: right;
  padding-top: 15px;
  padding-right: 25px;
}

#spec {
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 5px;
  padding-right: 5px;
}

#melist {
  list-style-type: circle;
  text-align: left;
}

#sublist {
  list-style-type: square;
  text-indent: inherit;
}

.twitter {
  padding-top: 15px;
}

#projs {
  position: absolute;
  background-color: white;
  width: 65%;
  left: 250px;
}

div ul li {
  list-style-type: none;
  margin-left: 0.25em;
}

div article ul li {
  margin-right: 1.25em;
}

#name {
  text-decoration: underline;
}

#techused {
  font-weight: bold;
}

.nav {
  float: right;
}

.nav li {
  width: 28.5%%;
}

.nav li:hover {
  background-color: orange;
  color: white;
}

